--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,17 +13,17 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   noarch: python
   preserve_egg_dir: True
   script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
   run:
-    - python
+    - python >=3.6
     - click
     - setuptools
     - dtoolcore
@@ -59,3 +59,4 @@ about:
 extra:
   recipe-maintainers:
     - pvanheus
+    - jan-janssen
